policies/require-imagepullpolicy-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredimagepullpolicy
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredImagePullPolicy
      validation:
        openAPIV3Schema:
          type: object
          properties:
            policy:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredimagepullpolicy

        violation[{"msg": msg}] {
          required := input.parameters.policy
          container := input.review.object.spec.containers[_]
          container.imagePullPolicy != required
          msg := sprintf("Pod container %v does not have imagePullPolicy=%v", [container.name, required])
        }
