policies/require-imagepullpolicy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredImagePullPolicy
metadata:
  name: require-imagepullpolicy
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    policy: "Always"
